[project]
name = "code-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Eish Chandeal eishchandeal51@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers (>=5.1.2,<6.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false